@@ -14,6 +14,7 @@ Cardservproxy changelog:
 - Fixed: Per user sid lists provided by custom usermanagers were ignored for multi-context sessions (Csp, ExtNewcamd).
 - Fixed: The default-deny-list wasn't checked for CspConnect connection attempts.
 - Fixed: Closing of old sessions (on new login) wasn't working for ExtNewcamd.
+- Fixed: Debug mode for the "*" pseudo profile (Csp, ExtNewcamd) couldn't be turned off via config (attribute ignored).
 - Changed: Two ecms (or dcw replies) with the same payload data but different dvb table ids (even/0x80 vs odd/0x81) are
   now considered identical by the proxy. Implications unknown.
 - Changed: ClusteredCache transport format now includes meta-data such as ca-id and network-id.
